Hided 'Completed' tab, when there are no completed tasks, and the same for 'In Progress'

--- a/src/app/components/modals/modify-item/modify-item.component.html
+++ b/src/app/components/modals/modify-item/modify-item.component.html
@@ -9,7 +9,7 @@
   
     <div class="description modal-text description-container">
         <label for="description">Description</label>
-        <textarea id="description" [value]="this.description" [(ngModel)]="this.description"></textarea>
+        <textarea autosize id="description" [value]="this.description" [(ngModel)]="this.description"></textarea>
     </div>
 </div>
 <div class="modal-footer">
