Added textarea resize for adding task too

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container task-manager-container ">
-    <button class="settings">
+    <button class="settings" (click)="showSettings()">
         <i class="fa-solid fa-gear settings-icon"></i>
     </button>
     <div class="row title-row">
