--- a/src/app/components/modals/create-task/create-task.component.html
+++ b/src/app/components/modals/create-task/create-task.component.html
@@ -9,7 +9,7 @@
   
     <div class="description modal-text description-container">
         <label for="description">Description</label>
-        <textarea id="description" [(ngModel)]="description"></textarea>
+        <textarea autosize id="description" [(ngModel)]="description"></textarea>
     </div>
 </div>
 <div class="modal-footer">
