--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -9,8 +9,6 @@ $control-border-width: 2px;
 $input-border-color: transparent;
 $input-shadow: none;
 
-$prussianBlue: #122E42;
-
 .list-color {
     color: $listColor;
 }
@@ -56,6 +54,7 @@ $prussianBlue: #122E42;
     padding: 20px;
     border-radius: 0 30px 0 30px;
     position: relative;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .add-list {
@@ -144,14 +143,11 @@ $prussianBlue: #122E42;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        box-shadow: 0 8px 10px -10px grey
     }
 
     .task-title {
         padding-left: 10px;
-    }
-
-    .task:not(:last-child) {
-        border-bottom: 1px dashed $darkSpringGreen;
     }
 
     .task:not(:first-child) {
@@ -410,5 +406,3 @@ $prussianBlue: #122E42;
     outline: none;
     box-shadow: none;
 }
-
-
