--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -15,21 +15,11 @@
         </div>
     </div>
     <div class="row sidebar">
-        <div class="lists-container col-4">
-            <div *ngFor="let list of lists" class="list list-color" [ngClass]="selectedList._id == list._id ? 'selected' : ''" (click)="selectList(list)">
-                {{ list.title }}
 
-                <div class="actions">
-                    <button class="modify" (click)="modifyThisList(list)" title="Modify List">
-                        <i class="fa-solid fa-pen-to-square"></i>
-                    </button>
-    
-                    <button class="delete" (click)="deleteThisList(list)" title="Delete List">
-                        <i class="fa-solid fa-trash"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
+        <app-lists class="lists-container col-4"
+            [lists]="lists" [selectedList]="selectedList"
+            (listEvent)="listEvent($event)">
+        </app-lists>
         
         <div class="task-list-container col-8">
             <mat-tab-group *ngIf="tasks.length > 0" mat-align-tabs="start">
