Created a variables stylesheet

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,13 +1,4 @@
-$listColor:  rgb(153,50,204);// hwb(195 22% 15%);
-$taskColor: #98C540;
-
-$darkSpringGreen: #2E6B48;
-$darkJungleGreen: #12261D;
-$prussianBlue: #122E42;
-
-$control-border-width: 2px;
-$input-border-color: transparent;
-$input-shadow: none;
+@import "../../../styles/variables.scss";
 
 .list-color {
     color: $listColor;
@@ -168,7 +159,6 @@ $input-shadow: none;
         color: $listColor;
     }
 }
-
 
 .delete, 
 .modify, 
