--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -7,6 +7,7 @@
     padding-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
+    min-height: 72px;
 }
 
 .list:hover {
@@ -20,6 +21,12 @@
 
 .actions {
     display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    .dropdown-toggle::after {
+        display: none;
+    }
 }
 
 .list-color {
