--- a/src/app/components/lists/lists.component.html
+++ b/src/app/components/lists/lists.component.html
@@ -3,14 +3,18 @@
         {{ list.title }}
     </div>
 
-    
     <div class="actions" *ngIf="selectedList._id == list._id">
-    <circle-progress *ngIf="selectedList._id == list._id" [percent]="list.percentCompleted"></circle-progress>
-
+        <div class="progress-bar-container">
+            <span  class="progress-bar-text">{{list.percentCompleted}} %</span>
+            <ngb-progressbar [textType]="dark" [showValue]="false" type="success" [value]="list.percentCompleted"></ngb-progressbar>
+        </div>
         <div ngbDropdown>
-            <i class="fa-solid fa-circle-chevron-down dropdown-toggle" id="dropdownBasic1" ngbDropdownToggle></i>
-      
+            <i class="fa-solid fa-angle-down dropdown-toggle" id="dropdownBasic1" ngbDropdownToggle></i>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <button class="markCompleted" title="Mark as Completed" (click)="completeThisList(list)">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+
                 <button class="modify" (click)="modifyThisList(list)" title="Modify List">
                     <i class="fa-solid fa-pen-to-square"></i>
                 </button>
@@ -20,6 +24,5 @@
                 </button>
             </div>
         </div>
-       
     </div>
 </div>
