--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -57,6 +57,10 @@
         margin-top: 5px;
     }
 
+    .dropdown-toggle:hover {
+        color: $listColor;
+    }
+
     .dropdown-toggle::after {
         display: none;
     }
