Changed app name to 'TaskFlow' and changed the favicon

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,14 +3,9 @@
         <i class="fa-solid fa-gear settings-icon"></i>
     </button>
     <div class="row title-row">
-        <div class="col-4">
+        <div class="col-12">
             <h1 class="title has-text-primary">
-                Lists <i class="fa-solid fa-tree"></i>
-            </h1>
-        </div>
-        <div class="col-8">
-            <h1 class="title has-text-primary">
-                Tasks <i class="fa-brands fa-pagelines"></i>
+                TaskFlow <i class="fa-solid fa-tree"></i>
             </h1>
         </div>
     </div>
