Added basic dialogs for success messages (for add/remove/modify lists and tasks) with fade animation

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,8 +9,10 @@
             </h1>
         </div>
     </div>
+    <div class="row">
+        <app-success-message [eventData]="successEventData"></app-success-message>
+    </div>
     <div class="row sidebar">
-
         <app-lists class="lists-container col-4"
             [lists]="lists" [selectedList]="selectedList"
             (listEvent)="listEvent($event)">
