Added Modal when clicking a task

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
                                 <div class="circle" (click)="completeThisTask(task, indexOfElement)">
                                     <div class="checkmark"></div>
                                 </div>
-                                <div class="task-title">
+                                <div class="task-title" (click)="openTaskModal(task)">
                                     {{task.title}}
                                 </div>
                             </div>
