--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -53,7 +53,7 @@
                                 <div class="circle-completed">
                                     <div class="checkmark"></div>
                                 </div>
-                                <div class="task-title">
+                                <div class="task-title" (click)="openTaskModal(task)">
                                     {{task.title}}
                                 </div>
                             </div>
