--- a/src/app/components/lists/lists.component.html
+++ b/src/app/components/lists/lists.component.html
@@ -8,8 +8,8 @@
         </div>
     </div>
     <div class="inprogress-dropdown-area" [ngClass]="showInProgress == false ? 'hide' : ''">
-        <div *ngFor="let list of inProgressLists" class="list list-color" [ngClass]="selectedList._id == list._id ? 'selected' : ''">
-            <div class="list-title" (click)="selectList(list)">
+        <div *ngFor="let list of inProgressLists"  (click)="selectList(list)" class="list list-color" [ngClass]="selectedList._id == list._id ? 'selected' : ''">
+            <div class="list-title">
                 {{ list.title }}
             </div>
     
@@ -21,7 +21,7 @@
                 <div ngbDropdown>
                     <i class="fa-solid fa-angle-down dropdown-toggle" id="dropdownBasic1" ngbDropdownToggle></i>
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                        <button class="markCompleted" title="Mark as Completed" (click)="markAsCompleted(list)">
+                        <button class="markCompleted" title="Mark as Completed"  *ngIf="list.percentCompleted == 100" (click)="markAsCompleted(list)">
                             <i class="fa-solid fa-check"></i>
                         </button>
                         <button class="modify" (click)="modifyThisList(list)" title="Modify List">
@@ -48,8 +48,8 @@
         </div>
     </div>
     <div class="completed-dropdown-area" [ngClass]="showCompleted == false ? 'hide' : ''">
-        <div *ngFor="let list of completedLists" class="list list-color" [ngClass]="selectedList._id == list._id ? 'selected' : ''">
-            <div class="list-title" (click)="selectList(list)">
+        <div *ngFor="let list of completedLists" class="list list-color" (click)="selectList(list)" [ngClass]="selectedList._id == list._id ? 'selected' : ''">
+            <div class="list-title">
                 {{ list.title }}
             </div>
     
