--- a/src/app/components/dialogs/delete-item/delete-item.component.html
+++ b/src/app/components/dialogs/delete-item/delete-item.component.html
@@ -2,9 +2,9 @@
     <h4 class="modal-title" id="modal-title">Remove {{elementName}}</h4>
 </div>
 <div class="modal-body">
-<p>  Are you sure you want to delete this {{elementName}}?</p>
+<p class="modal-body-text">  Are you sure you want to delete this {{elementName}}?</p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="removeItem(true)">Ok</button>
+    <button type="button" class="btn btn-success" (click)="removeItem(true)">Yes</button>
 </div>
