--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,9 +73,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         margin-left: 15px;
         width: 100%;
         padding: 10px;
-        border: 1px solid $taskColor;
-        border-radius: 20px;
-        box-shadow: 0 8px 10px -10px $taskColor;
+        border: 1px solid $listColor;
+        border-radius: 10px;
+        box-shadow: 0 8px 10px -10px $listColor;
     }
 }
 
@@ -91,8 +91,63 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     textarea {
         width: 100%;
         padding: 10px;
-        border: 1px solid $taskColor;
-        border-radius: 20px;
-        box-shadow: 0 8px 10px -10px $taskColor;
+        border: 1px solid $listColor;
+        border-radius: 10px;
+        box-shadow: 0 8px 10px -10px $listColor;
     }
 }
+
+/* Modals */
+
+.modal .modal-content {
+    border-radius: 5px 5px 30px 30px;
+
+    input, textarea {
+        outline: none;
+    }
+    
+    label {
+        color: $listColor;
+    }
+
+    .modal-header {
+        color: $listColor;
+        border-bottom: none;
+        background: linear-gradient(45deg, white, white, $taskColor);
+    }
+
+    .modal-footer {
+        min-height: 50px;
+        border: none;
+    }
+
+    .btn-success {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        border-radius: 30px 0;
+        font-size: 18px;
+        padding: 5px 20px 5px 20px;
+        background: $taskColor;
+        border: none;
+        outline: none;
+    }
+
+    .btn-danger {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        border-radius: 0 30px;
+        font-size: 18px;
+        padding: 5px 20px 5px 20px;
+        background: $listColor;
+        border: none;
+        outline: none;
+    }
+
+    .modal-body-text {
+        font-size: 18px;
+    }
+}
+
+
