--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -2,7 +2,9 @@
     <h4 class="modal-title" id="modal-title"> {{task.title}}</h4>
 </div>
 <div class="modal-body">
-  {{task.description}}
+  <p class="modal-body-text">
+    {{task.description}}
+  </p>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-danger" (click)="closeModal()">Cancel</button>
