--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,3 +151,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 
+input:disabled, textarea:disabled {
+    background: lightgray;
+}
