--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,28 +1,82 @@
-<div class="centered-content">
-    <div class="login-box">
-        <h1 class="title has-text-primary"> Login </h1>
-        <div class="field">
-            <p class="control has-icons-left has-icons-right">
-              <input class="input has-background-light" type="email" placeholder="Email">
-              <span class="icon is-small is-left">
-                <i class="fas fa-envelope"></i>
-              </span>
-            </p>
+<div class="container">
+  <div class="row center">
+    <div class="col-md-6 center">
+      <div class="card card-container ">
+        <img
+          id="profile-img"
+          src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+          class="profile-img-card"
+        />
+        <form
+          *ngIf="!isLoggedIn"
+          name="form"
+          (ngSubmit)="f.form.valid && onSubmit()"
+          #f="ngForm"
+          novalidate
+        >
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              class="form-control"
+              name="username"
+              [(ngModel)]="form.username"
+              required
+              #username="ngModel"
+            />
+            <div
+              class="alert alert-danger"
+              role="alert"
+              *ngIf="username.errors && f.submitted"
+            >
+              Username is required!
+            </div>
           </div>
-          <div class="field">
-            <p class="control has-icons-left">
-              <input class="input  has-background-light" type="password" placeholder="Password">
-              <span class="icon is-small is-left">
-                <i class="fas fa-lock"></i>
-              </span>
-            </p>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              [(ngModel)]="form.password"
+              required
+              minlength="6"
+              #password="ngModel"
+            />
+            <div
+              class="alert alert-danger"
+              role="alert"
+              *ngIf="password.errors && f.submitted"
+            >
+              <div *ngIf="password.errors['required']">Password is required</div>
+              <div *ngIf="password.errors['minlength']">
+                Password must be at least 6 characters
+              </div>
+            </div>
           </div>
-          <div class="field is-pulled-right">
-            <p class="control">
-              <button class="button is-success has-text-white">
-                Login
-              </button>
-            </p>
+          <div class="form-group">
+            <button class="btn btn-primary btn-block">
+              Login
+            </button>
           </div>
+          <div class="form-group">
+            <div
+              class="alert alert-danger"
+              role="alert"
+              *ngIf="f.submitted && isLoginFailed"
+            >
+              Login failed: {{ errorMessage }}
+            </div>
+          </div>
+        </form>
+        <div class="alert alert-success" *ngIf="isLoggedIn">
+          Logged in as user. <!--TODO add role-->
+        </div>
+
+        <div class="register-account">
+          You don't have an account yet? Register <a routerLink="/register"> here </a>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
